fixed spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,125 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  flex: 12;
+  position: relative;
+  min-height: 100%;
+  margin: 0; }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+  margin: 0px;
+  flex: 12; }
+
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 1px;
+  float: left;
+  justify-content: center;
+  align-content: center; }
+
+.col-12 {
+  flex: 12; }
+
+.col-11 {
+  flex: 11; }
+
+.col-10 {
+  flex: 10; }
+
+.col-9 {
+  flex: 9; }
+
+.col-8 {
+  flex: 8; }
+
+.col-7 {
+  flex: 7; }
+
+.col-6 {
+  flex: 6; }
+
+.col-5 {
+  flex: 5; }
+
+.col-4 {
+  flex: 4; }
+
+.col-3 {
+  flex: 3; }
+
+.col-2 {
+  flex: 2; }
+
+.col-1 {
+  flex: 1; }
+
+@media screen and (max-width: 970px) {
+  .row {
+    flex-direction: column; }
+
+  .button-row {
+    flex-direction: row; }
+
+  .pb-row {
+    flex-direction: row; } }
 body {
   margin: 0;
   padding: 0;
@@ -33,12 +155,10 @@ nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  height: 11.5%; }
+  display: flex; }
 
 nav div.center {
-  margin: 0px;
-  height: 100%; }
+  margin: 0px; }
 
 nav ul.left {
   float: left;
@@ -98,11 +218,13 @@ div.linkDiv {
   margin: 0 auto;
   color: #145068; }
 
-html {
-  margin-bottom: 60px; }
+html, body, .container {
+  height: 100%;
+  width: 100%; }
 
-.titleRow {
-  margin-top: 11.5%; }
+.titleRowSpacer {
+  min-height: 14%;
+  width: 100%; }
 
 .subtitle p {
   font-size: 1.5vw;
