--- a/public/sass/_grid.scss
+++ b/public/sass/_grid.scss
@@ -2,19 +2,16 @@
   display: flex;
   flex-direction: column;
   flex: 12;
-  padding-bottom: 60px;
   position: relative;
   min-height: 100%;
-  width: 90%;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .row {
   display: flex;
   flex-direction: row;
-  padding: 10px 0px;
+  padding: 0px;
   margin: 0px;
-  margin-top: 10px;
   flex: 12;
 }
 
