--- a/public/sass/_nav.scss
+++ b/public/sass/_nav.scss
@@ -40,12 +40,10 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
-  height: 11.5%;
 }
 
 nav div.center {
-  margin: 0px;
-  height: 100%;  
+  margin: 0px; 
 }
 
 nav ul.left {
